# balance_sim

./: LICENSE  README.md
src/balance_bringup/: CMakeLists.txt  package.xml
src/balance_bringup/config/: balance_controllers.yaml  test_goal_publishers_config.yaml
src/balance_bringup/launch/: balance.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py
src/balance_description/: CMakeLists.txt  package.xml
src/balance_description/config/: balance_forward_position_publisher.yaml  controller.yaml
src/balance_description/launch/: gazebo_control.launch.py  import_gazebo.launch.py  test_forward_position_controller.launch.py  test_gazebo_control.launch.py  view_robot.launch.py
src/balance_description/meshes/: calf1_Link.STL  thigh2_Link.STL  wheel2_Link.STL
src/balance_description/urdf/: balance.xacro  balance_control.xacro  balance_description.xacro  go1.urdf  view.urdf
src/balance_hardware_interface/: CMakeLists.txt  balance_hardware_interface.xml  package.xml
src/balance_hardware_interface/src/: balance_hardware_interface.cpp
src/balance_model/: CMakeLists.txt  package.xml
src/balance_model/config/: controller.yaml  controllers.yaml
src/balance_model/launch/: display.launch.py  gazebo.launch.py  sim.launch.py
src/balance_model/meshes/: calf2_Link.STL  thigh1_Link.STL  wheel1_Link.STL
src/balance_model/rviz/: balance_display.rviz
src/balance_model/urdf/: RMUC2025.urdf  balance.urdf  balance_control.xacro  balance_mode.urdf  balance_model.csv  balance_model.urdf  balance_model.xacro  balance_model_backup.urdf
(+3 files in other folders)
