<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>balance_model</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for balance_model
    This package contains configuration data, 3D models and launch files
    for balance_model robot
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>tf2_ros</depend>
  <depend>ros2launch</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>